--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,11 @@
         android:layout_gravity="center_horizontal"
         android:text="@string/count_up_label"
         android:id="@+id/count_up"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/reset_label"
+        android:id="@+id/reset"/>
+
 </LinearLayout>
